# control_msgs

./: .gitlab-ci.yml  .hgignore  .pre-commit-config.yaml  .travis.yml  README.md  package.xml  ros_controls.humble.repos  ros_controls.jazzy.repos  ros_controls.kilted.repos  ros_controls.rolling.repos  stack.xml
.github/workflows/: build-foxy.yml  build-galactic.yml  build-humble.yml  build-rolling.yml  build-source-foxy.yml  build-source-galactic.yml  build-source-rollling.yml  build.yml  ci-pre-commit.yml  ci.yml  format.yml  humble-binary-downstream-build.yml  humble-build.yml  humble-ci-pre-commit.yml  jazzy-binary-downstream-build.yml  jazzy-build-win.yml  jazzy-build.yml  jazzy-pre-commit.yml  prerelease.yaml  rolling-binary-downstream-build.yml  rolling-build-win.yml  rolling-build.yml  rolling-pre-commit.yml  ros-lint.yml  rosdoc2.yml
action/: PointHeadAction.action
compatibility/control/: package.xml
control_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
control_msgs/action/: AntipodalGripperCommand.action  ExecuteMotionPrimitiveSequence.action  FollowJointTrajectory.action  FollowJointWrenchTrajectory.action  GPIOToolCommand.action  Gripper.action  GripperCommand.action  IOGripperCommand.action  JointGroupCommand.action  MultiDOFFollowJointTrajectory.action  ParallelGripperCommand.action  PointHead.action  SetGPIOToolConfig.action  SetGripperConfig.action  SetIOGripperConfig.action  SingleJointPosition.action
control_msgs/doc/: index.rst
control_msgs/msg/: AdmittanceController2021State.msg  AdmittanceControllerState.msg  BatteryStateArray.msg  BatteryStates.msg  CANopenState.msg  CartesianTrajectoryGeneratorState.msg  DOFLimits.msg  DynamicComponentValues.msg  DynamicInterfaceGroupValues.msg  DynamicInterfaceValues.msg  DynamicJointState.msg  EtherCATState.msg  Float64Values.msg  GPIOToolControllerState.msg  GPIOToolTransition.msg  GenericHardwareState.msg  HardwareDeviceDiagnostics.msg  HardwareDeviceStatus.msg  HardwareDiagnostics.msg  HardwareStatus.msg  IOGripperControllerState.msg  IOGripperState.msg  InterfaceValue.msg  InterfacesNames.msg  InterfacesValues.msg  JointComponentTolerance.msg  JointControllerState.msg  JointControllerStateArray.msg  JointJog.msg  JointTolerance.msg  JointTrajectory.msg  JointTrajectoryControllerState.msg  JointTrajectoryPoint.msg  JointWrenchPoint.msg  JointWrenchTrajectory.msg  JointWrenchTrajectoryPoint.msg  Keys.msg  MecanumDriveControllerState.msg  MotionArgument.msg  MotionPrimitive.msg  (+17 more)
control_msgs/srv/: Calibrate.srv  QueryCalibrationState.srv  QueryMultiDOFTrajectoryState.srv  QueryTrajectoryState.srv  ResetAxis.srv  ResetDofs.srv  SetConfig.srv  SetDOFLimits.srv  SetGPIOToolConfig.srv  SetIOGripperConfig.srv  SetOdometry.srv
