<package>
  <name>control_msgs</name>
  <version>1.1.0</version>
  <description>
    control_msgs contains base messages and actions useful for
    controlling robots.  It provides representations for controller
    setpoints and joint and cartesian trajectories.
  </description>
  <author email="sglaser@willowgarage.com">Stuart Glaser</author>
  <maintainer email="control_msgs@willowgarage.com">Willow Garage</maintainer>

  <license>BSD</license>

  <url>http://ros.org/wiki/control_msgs</url>

  <build_depend>catkin</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>langs-dev</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>


  <run_depend>langs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
