<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>control_msgs</name>
  <version>5.1.0</version>
  <description>
    control_msgs contains base messages and actions useful for
    controlling robots. It provides representations for controller
    setpoints and joint and cartesian trajectories.
  </description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>

  <license>BSD-3-Clause</license>

  <url type="website">https://control.ros.org</url>
  <author email="sglaser@willowgarage.com">Stuart Glaser</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- action_msgs is needed up to humble -->
  <!-- https://github.com/ros2/rcl_interfaces/issues/75 -->
  <!-- TODO(anyone) remove if master branch - compatibility on humble is not necessary anymore -->
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
